--- a/example/Makefile
+++ b/example/Makefile
@@ -1,8 +1,8 @@
 build:
 	docker build --rm -t api-example .
 
-run:
-	docker run -d \
+test:
+	docker run --rm -ti \
 		-v /var/run/docker.sock:/var/run/docker.sock \
 		-v /usr/bin/docker:/usr/bin/docker \
 		-p 80:4242 \
