Depoy example on SailAbove.io

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,9 +1,9 @@
 build:
-	docker build --rm -t api-example .
+	docker build --rm -t apish-example .
 
 test:
 	docker run --rm -ti \
 		-v /var/run/docker.sock:/var/run/docker.sock \
 		-v /usr/bin/docker:/usr/bin/docker \
 		-p 80:4242 \
-		api-example
+		apish-example
